; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aacraid/extr_rkt.c_aac_rkt_select_comm.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aacraid/extr_rkt.c_aac_rkt_select_comm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aac_dev = type { %struct.TYPE_4__*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i64 }
%struct.TYPE_3__ = type { i32 }

@AAC_COMM_MESSAGE = common dso_local global i32 0, align 4
@AAC_NUM_IO_FIB_RKT = common dso_local global i64 0, align 8
@AAC_NUM_MGT_FIB = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.aac_dev*, i32)* @aac_rkt_select_comm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aac_rkt_select_comm(%struct.aac_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.aac_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.aac_dev* %0, %struct.aac_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.aac_dev*, %struct.aac_dev** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @aac_rx_select_comm(%struct.aac_dev* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @AAC_COMM_MESSAGE, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %35

12:                                               ; preds = %2
  %13 = load %struct.aac_dev*, %struct.aac_dev** %3, align 8
  %14 = getelementptr inbounds %struct.aac_dev, %struct.aac_dev* %13, i32 0, i32 0
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @AAC_NUM_IO_FIB_RKT, align 8
  %19 = icmp sgt i64 %17, %18
  br i1 %19, label %20, label %34

20:                                               ; preds = %12
  %21 = load i64, i64* @AAC_NUM_IO_FIB_RKT, align 8
  %22 = load i64, i64* @AAC_NUM_MGT_FIB, align 8
  %23 = add nsw i64 %21, %22
  %24 = call i32 @cpu_to_le32(i64 %23)
  %25 = load %struct.aac_dev*, %struct.aac_dev** %3, align 8
  %26 = getelementptr inbounds %struct.aac_dev, %struct.aac_dev* %25, i32 0, i32 1
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  store i32 %24, i32* %28, align 4
  %29 = load i64, i64* @AAC_NUM_IO_FIB_RKT, align 8
  %30 = load %struct.aac_dev*, %struct.aac_dev** %3, align 8
  %31 = getelementptr inbounds %struct.aac_dev, %struct.aac_dev* %30, i32 0, i32 0
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  store i64 %29, i64* %33, align 8
  br label %34

34:                                               ; preds = %20, %12
  br label %35

35:                                               ; preds = %34, %2
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local i32 @aac_rx_select_comm(%struct.aac_dev*, i32) #1

declare dso_local i32 @cpu_to_le32(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
